2000-03-17  Roland McGrath  <roland@baalperazim.frob.com>

	* io-reauthenticate.c (trivfs_S_io_reauthenticate): Use
	ports_get_send_right.

1999-11-08  Roland McGrath  <roland@baalperazim.frob.com>

	* io-write.c: Include <fcntl.h>.

	* fsys-getroot.c (trivfs_S_fsys_getroot): Fix typo.

	* io-write.c (trivfs_S_io_write): Return EBADF if trivfs_allow_open
	doesn't include O_WRITE.

	* io-modes-get.c (trivfs_S_io_get_openmodes): Remove assert.
	The default implementation ought to be fine for this.

	* io-owner-get.c (trivfs_S_io_get_owner): Remove asserts.
	It is entirely reasonable to have EOPNOTSUPP be the default
	implementation for these calls that files are not obligated to provide.
	* io-owner-mod.c (trivfs_S_io_mod_owner): Likewise.
	* io-map.c (trivfs_S_io_map): Likewise.
	* io-async.c (trivfs_S_io_async): Likewise.
	* io-async-icky.c (trivfs_S_io_get_icky_async_id): Likewise.

	* fsys-getroot.c (trivfs_S_fsys_getroot): Return EROFS or EACCES for a
	disallowed open attempt, instead of EOPNOTSUPP.  EOPNOTSUPP results in
	the confusing result of ENOTDIR being delivered to the user.

1999-10-11  Roland McGrath  <roland@baalperazim.frob.com>

	* dir-readdir.c (trivfs_S_dir_readdir): Take DATA_DEALLOC parameter.

	* dir-lookup.c (trivfs_S_dir_lookup): Duplicate CRED->user to pass it
	to trivfs_open.  Add ref to CRED->realnode when used by trivfs_open.

	* trivfs.h (trivfs_open_hook): New variable.
	* fsys-getroot.c (trivfs_S_fsys_getroot): Use it.

1999-09-13  Roland McGrath  <roland@baalperazim.frob.com>

	* Makefile, io-map.c, io-map-segment.c: Reverted changes related to
	io_map_segment.

1999-09-07  Thomas Bushnell, BSG  <tb@mit.edu>

	* io-map-segment.c (trivfs_S_io_map): New file.
	* io-map.c (trivfs_S_io_map): Just call trivfs_S_io_map_segment.
	* Makefile (IOSRCS): Add io-map-segment.c.

Mon Mar 15 14:36:33 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* migsupport.c (trivfs_begin_using_protid): In first branch,